methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:2: error: not found: value faireligne
  faireligne()
  ^